--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,13 +4,24 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <servlet>
-        <servlet-name>TestController</servlet-name>
-        <servlet-class>com.ilya.controllers.TestController</servlet-class>
-    </servlet>
+  <servlet>
+    <servlet-name>TestController</servlet-name>
+    <servlet-class>com.ilya.controllers.TestController</servlet-class>
+  </servlet>
 
-    <servlet-mapping>
-        <servlet-name>TestController</servlet-name>
-        <url-pattern>/test</url-pattern>
-    </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>TestController</servlet-name>
+    <url-pattern>/test</url-pattern>
+  </servlet-mapping>
+  
+  <listener>
+    <listener-class>com.ilya.dao.DaoContextListener</listener-class>
+  </listener>
+
+<!--  <jsp-config>-->
+<!--    <jsp-property-group>-->
+<!--      <url-pattern>*.jsp</url-pattern>-->
+<!--      <el-ignored>false</el-ignored>-->
+<!--    </jsp-property-group>-->
+<!--  </jsp-config>-->
 </web-app>
